# qt5_ci_test

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
